src/objects/Delivery_Order__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Delivery Order Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delivery Orders</relationshipLabel>
        <relationshipName>Delivery_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_date__c</fullName>
        <label>Delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freight_Operator__c</fullName>
        <label>Freight Operator</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_parcels__c</fullName>
        <label>Number of parcels</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Delivery Orders</relationshipLabel>
        <relationshipName>Delivery_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <label>Delivery Order</label>
    <nameField>
        <displayFormat>Delivery Order-{0000}</displayFormat>
        <label>Delivery Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Invoice_paid</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.Invoice_paid__c =0</errorConditionFormula>
        <errorMessage>The delivery Order can not be issued as the invoice has not yet been paid</errorMessage>
    </validationRules>
</CustomObject>